# market-generic

./: .coveragerc  CHANGELOG.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  settings.xml  setup.py
.github/workflows/: cd-build-upload.yml  ci-format-test.yml  ci-format.yml  ci-test-run.yml
algotrade/calendar/: calendar_tool.py
configs/: nse.json
tests/: test_main.py
tests/test_calendar/: test_calendar_data.py
tests/test_nse/: test_nse_all_stocks.py  test_nse_config.py  test_nse_indices_config.py  test_nse_stock.py
tests/test_option_chain/: test_index_option_chain.py  test_stock_option_chain.py
tests/test_ticker/: test_api_config.py  test_exchange_data.py  test_market.py  test_yf.py
trade/: main.py
trade/calendar/: __init__.py  calendar_data.py  calendar_tool.py
trade/exchange/: __init__.py  index_generics.py  market.py  stock_generics.py  yf.py
trade/notify/: __init__.py  notifier.py
trade/nse/: __init__.py  data_generics.py  nse_all_stocks.py  nse_config.py  nse_fno.py  nse_index.py  nse_indices_config.py  nse_stock.py
trade/option_chain/: generic_option_chain.py  index_option_chain.py  stock_option_chain.py
trade/reports/: __init__.py  executor.py  index_report.py  reporter.py  stock_reports.py
trade/technicals/: __init__.py
trade/ticker/: __init__.py  api_config.py  index_generics.py  market.py  stock_generics.py  yf.py
trade/utils/: __init__.py  df_market_utils.py  gsheet_util.py  html_parsing.py  log_configurator.py  master_meta.py  network_tools.py  op_utils.py  singleton_meta.py  telegram_api.py
(+64 files in other folders)
